kubernetes/2.monitoring/3-Grafana-deployment/8.grafana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: grafana
          image: grafana/grafana-oss:11.0.0-ubuntu
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-volume
              mountPath: /var/lib/grafana
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-pv-claim
