kubernetes/2.monitoring/3-Grafana-deployment/9.grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: monitoring
  labels:
    app: grafana-svc
spec:
  ports:
    - port: 3000
  selector:
    app: grafana
